vendor/fixed-macro/tests/compile-fail/no-input.rs
fn main() {
    fixed_macro::fixed!();
}
