vendor/fixed-macro/tests/compile-fail/no-input.stderr
error: unexpected end of input, expected literal
 --> tests/compile-fail/no-input.rs:2:5
  |
2 |     fixed_macro::fixed!();
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `fixed_macro::fixed` (in Nightly builds, run with -Z macro-backtrace for more info)
